--- a/style.css
+++ b/style.css
@@ -5,3 +5,44 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.home {
+  background-color: #1f2937;
+  padding: 10px 30px;
+}
+
+li {
+  list-style-type: none;
+}
+
+h1,
+.logo {
+  color: #f9faf8;
+}
+
+p,
+.navbar li {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+.logo {
+  font-size: 24px;
+  margin-right: auto;
+}
+
+.navbar {
+  display: flex;
+  gap: 15px;
+}
+
+.home-container {
+  height: 500px;
+  display: flex;
+  /* justify-content: center;
+  align-items: stretch;
+} */
