--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* border: 2px solid red; */
 }
 
 .home {
@@ -11,7 +12,13 @@
   background-color: #1f2937;
   font-size: 18px;
   color: #e5e7eb;
-  padding: 10px 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  /* padding: 10px 100px; */
   /* display: flex;
   flex-direction: column;
   justify-content: space-between; */
@@ -19,8 +26,10 @@
 
 .navbar {
   display: flex;
+  justify-content: center;
   gap: 25px;
   margin-bottom: 100px;
+  width: 900px;
 }
 
 .logo {
@@ -57,6 +66,7 @@ button {
 .home-container {
   display: flex;
   gap: 30px;
+  width: 900px;
 }
 
 .sub-container {
