--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* border: 2px solid red; */
+  border: 1px solid red;
 }
 
 .home {
@@ -28,7 +28,7 @@
   display: flex;
   justify-content: center;
   gap: 25px;
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
   width: 900px;
 }
 
@@ -67,6 +67,8 @@ button {
   display: flex;
   gap: 30px;
   width: 900px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .sub-container {
