--- a/style.css
+++ b/style.css
@@ -7,37 +7,6 @@
   border: 1px solid red;
 }
 
-.home {
-  height: 70vh;
-  background-color: #1f2937;
-  font-size: 18px;
-  color: #e5e7eb;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  /* padding: 10px 100px; */
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between; */
-}
-
-.navbar {
-  display: flex;
-  justify-content: center;
-  gap: 25px;
-  /* margin-bottom: 100px; */
-  width: 900px;
-}
-
-.logo {
-  font-size: 24px;
-  color: #f9faf8;
-  margin-right: auto;
-}
-
 ul {
   list-style-type: none;
 }
@@ -63,6 +32,35 @@ button {
   border-radius: 8px;
 }
 
+/* HOME SECTION */
+
+.home {
+  height: 70vh;
+  background-color: #1f2937;
+  font-size: 18px;
+  color: #e5e7eb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+
+  width: 900px;
+}
+
+.logo {
+  font-size: 24px;
+  color: #f9faf8;
+  margin-right: auto;
+}
+
 .home-container {
   display: flex;
   gap: 30px;
@@ -72,13 +70,13 @@ button {
 }
 
 .sub-container {
-  /* flex: 1; */
   width: 50%;
 }
 
 .img-container {
-  /* flex: 1; */
   width: 50%;
   background-image: url("home-img.jpg");
   background-size: cover;
 }
+
+/* 2nd SECTION  */
