create the html of 2nd section

--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ h1 {
   margin-bottom: 30px;
 }
 
+h2 {
+  font-size: 36px;
+  font-weight: 900;
+  color: #1f2937;
+}
+
 p {
   margin-bottom: 30px;
 }
@@ -80,3 +86,7 @@ button {
 }
 
 /* 2nd SECTION  */
+
+.second-section {
+  text-align: center;
+}
