--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 ul {
@@ -88,31 +88,88 @@ button {
 /* 2nd SECTION  */
 
 .second-section {
-  /* text-align: center; */
   height: 400px;
-  /* width: 900px; */
-  background-color: aqua;
+  padding-top: 30px;
+  /* background-color: aqua; */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .card {
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  text-align: center;
+}
+
+.second {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  margin: auto;
+}
+
+.box-img {
+  height: 150px;
+  width: inherit;
+  border: 3px solid #3882f6;
+  border-radius: 12px;
+}
+
+.card p {
+  margin: 0;
+}
+
+.box1 {
+  background-image: url("img1.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.box2 {
+  background-image: url("img2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center calc(50% - 20px);
+}
+
+.box3 {
+  background-image: url("img3.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.box4 {
+  background-image: url("img4.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+/* TESTIMONIAL SECTION */
+
+.testimonial {
+  height: 400px;
+  background-color: #e5e7eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.testi-container {
+  font-size: 36px;
+  /* font-weight:300; */
+  width: 700px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.second {
-  width: 900px;
-  display: flex;
-  justify-content: center;
-}
-
-.box-img {
-  height: 150px;
-  width: 150px;
-  border: 3px solid #3882f6;
-  border-radius: 12px;
-  /* background-image: url("img1.jpg"); */
+.testi-container span {
+  align-self: flex-end;
+  font-weight: bold;
 }
