--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap");
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
   /* border: 1px solid red; */
 }
 
@@ -99,20 +99,21 @@ button {
   align-items: center;
 }
 
-.card {
-  width: 150px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5px;
-  text-align: center;
-}
-
 .second {
   display: flex;
   justify-content: center;
   gap: 50px;
   margin: auto;
+}
+
+.card {
+  width: 150px;
+  color: #1f2937;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  text-align: center;
 }
 
 .box-img {
@@ -181,3 +182,35 @@ button {
 }
 
 /* SECTION CALL-TO */
+
+.call-to {
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.call-container {
+  width: 800px;
+  background-color: #3882f6;
+  border-radius: 8px;
+  padding: 40px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+}
+
+.message p:first-of-type {
+  font-size: 20px;
+  color: #e5e7eb;
+  font-weight: bolder;
+}
+
+.message p:nth-of-type(2) {
+  color: #e5e7eb;
+}
+
+.call-container button {
+  border: 2px solid #e5e7eb;
+}
