--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300;1,400&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -76,6 +77,7 @@ button {
 }
 .home-container p {
   margin-bottom: 30px;
+  letter-spacing: 1px;
 }
 
 .sub-container {
@@ -84,6 +86,7 @@ button {
 
 .img-container {
   width: 50%;
+  border-radius: 4px;
   background-image: url("home-img.jpg");
   background-size: cover;
 }
@@ -125,6 +128,7 @@ button {
 
 .card p {
   margin: 0;
+  letter-spacing: 1px;
 }
 
 .box1 {
@@ -167,8 +171,9 @@ button {
 .testi-container {
   font-size: 36px;
   color: #1f2937;
-
-  /* font-weight:300; */
+  letter-spacing: 0.5px;
+  font-weight: 300;
+  font-style: italic;
   width: 700px;
   display: flex;
   flex-direction: column;
@@ -178,7 +183,7 @@ button {
 .testi-container span {
   /* color: #1f2937; */
   align-self: flex-end;
-  font-weight: bold;
+  font-weight: 400;
 }
 
 /* SECTION CALL-TO */
@@ -213,4 +218,16 @@ button {
 
 .call-container button {
   border: 2px solid #e5e7eb;
+}
+
+/* FOOTER SECTION */
+
+.footer {
+  height: 100px;
+  background-color: #1f2937;
+  font-size: 16px;
+  color: #e5e7eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
