--- a/style.css
+++ b/style.css
@@ -17,12 +17,14 @@ h1 {
   font-weight: 900;
   color: #f9faf8;
   margin-bottom: 30px;
+  letter-spacing: 1px;
 }
 
 h2 {
   font-size: 36px;
   font-weight: 900;
   color: #1f2937;
+  letter-spacing: 1px;
 }
 
 p {
