--- a/style.css
+++ b/style.css
@@ -27,10 +27,6 @@ h2 {
   letter-spacing: 1px;
 }
 
-p {
-  /* margin-bottom: 30px; */
-}
-
 button {
   background-color: #3882f6;
   color: #e5e7eb;
@@ -62,6 +58,18 @@ button {
   gap: 25px;
 
   width: 900px;
+}
+
+a {
+  text-decoration: none;
+  color: #e5e7eb;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+a:hover {
+  border-bottom: 1px solid #e5e7eb;
+  transition: 10s;
 }
 
 .logo {
